--- a/coreapi/library.properties
+++ b/coreapi/library.properties
@@ -5,5 +5,5 @@ maintainer=Marco Tombesi
 sentence=Modularized application framework Library for ESP8266 and ESP32
 paragraph=Modularized application framework Library for ESP8266 and ESP32
 category=Other
-url=https://github.com/baggior/CoreApi.git
+url=https://github.com/baggior/SmartHome_LIB.git
 architectures=*
