--- a/coreapi/library.properties
+++ b/coreapi/library.properties
@@ -1,9 +1,9 @@
-name=Core Api
+name=CoreApi
 version=1.0.0
 author=Marco Tombesi
 maintainer=Marco Tombesi
 sentence=Modularized application framework Library for ESP8266 and ESP32
 paragraph=Modularized application framework Library for ESP8266 and ESP32
 category=Other
-url=https://github.com/baggior/SmartHome_LIB.git
+url=https://github.com/baggior/SmartHome_LIB/tree/master/coreapi
 architectures=*
