--- a/coreapi/library.properties
+++ b/coreapi/library.properties
@@ -1,7 +1,7 @@
 name=CoreApi
 version=1.0.4
-author=Marco Tombesi
-maintainer=Marco Tombesi
+author=Marco Tombesi <marco.tombesi@gmail.com>
+maintainer=Marco Tombesi <marco.tombesi@gmail.com>
 sentence=Modularized application framework Library for ESP8266 and ESP32
 paragraph=Modularized application framework Library for ESP8266 and ESP32
 category=Other
