--- a/coreapi/platformio.ini
+++ b/coreapi/platformio.ini
@@ -17,6 +17,7 @@ framework = arduino
 
 [common]
 build_flags = -D MY_DEBUG
+              -D COREAPI_MQTT_ENABLED -D COREAPI_FTP_ENABLED -D COREAPI_REST_ENABLED
               -D COREAPI_MAIN_BUILDLINK ; build coreapi.cpp
 
 com_port = COM3
@@ -27,6 +28,10 @@ lib_deps =
     https://github.com/tzapu/WiFiManager#development
     TaskScheduler
     RemoteDebug
+
+    ESP8266FtpServer
+    PubSubClient
+    ESP Async WebServer
 
 [env:esp32dev]
 platform = espressif32
