--- a/coreapi/platformio.ini
+++ b/coreapi/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32dev
+default_envs = esp32dev ;, esp32dev_debug
 
 [env]
 framework = arduino
@@ -44,3 +44,8 @@ lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}      
             -D DEBUG_ESP_PORT=Serial
 			-D LOG_LOCAL_LEVEL=ESP_LOG_DEBUG
+
+[env:esp32dev_debug]
+extends=env:esp32dev
+build_type = debug
+
