--- a/coreapi/platformio.ini
+++ b/coreapi/platformio.ini
@@ -16,7 +16,7 @@ framework = arduino
 
 
 [common]
-build_flags = -D MY_DEBUG
+build_flags = ;-D MY_DEBUG
               -D COREAPI_MQTT_ENABLED -D COREAPI_FTP_ENABLED -D COREAPI_REST_ENABLED
               -D COREAPI_MAIN_BUILDLINK ; build coreapi.cpp
 
