ota update module

--- a/coreapi/platformio.ini
+++ b/coreapi/platformio.ini
@@ -32,6 +32,10 @@ lib_deps =
     ESP8266FtpServer
     PubSubClient
     ESP Async WebServer
+    
+    ;esp32FOTA
+    https://github.com/chrisjoyce911/esp32FOTA#master
+
 
 [env:esp32dev]
 platform = espressif32
