--- a/coreapi/platformio.ini
+++ b/coreapi/platformio.ini
@@ -16,9 +16,12 @@ framework = arduino
 
 
 [common]
+GIT_SRC_REV_build_flags = !python git_rev_macro.py
 build_flags = ;-D MY_DEBUG
+              ${common.GIT_SRC_REV_build_flags}
               -D COREAPI_MQTT_ENABLED -D COREAPI_FTP_ENABLED -D COREAPI_REST_ENABLED
               -D COREAPI_MAIN_BUILDLINK ; build coreapi.cpp
+               
 
 com_port = COM3
 lib_deps =     
