--- a/coreapi/.vscode/settings.json
+++ b/coreapi/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "regex": "cpp"
-    }
+    },
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
